# PhotonCamera

./: .gitignore  AGENTS.md  README.md  README_EN.md  TODO.md  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: android-build.yml
MGC/: build_install_mgc.sh
MGC/MGC_9.6.080_V24_MGC/: AndroidManifest.xml  apktool.yml
MGC/MGC_9.6.080_V24_MGC/res/anim/: blink_animation.xml  blink_animation_2s.xml  front_back_switch_button_animation.xml  photos_transition_noanim.xml  processing_indicator_path_2_animation.xml  side_control_state_list.xml
MGC/MGC_9.6.080_V24_MGC/res/animator/: active_focus_converge_outer_ring_opacity_fade_out.xml  active_focus_scan_inner_splash_diameter_scale_up.xml  active_focus_scan_inner_splash_opacity_fade_in.xml  active_focus_scan_inner_splash_opacity_fade_out.xml  active_focus_scan_outer_ring_diameter_scale_down.xml  active_focus_scan_outer_ring_opacity_fade_in.xml  anim_options_fade_out.xml  autotimer_tutorial_text_hide.xml  autotimer_tutorial_text_show.xml  circular_image_button_anim.xml  focus_lock_hold_inner_splash_diameter_scale_up.xml  focus_lock_hold_inner_splash_opacity_fade_in.xml  focus_lock_hold_outer_ring_opacity_fade_in.xml  focus_lock_hold_outer_ring_thickness_scale_up.xml  focus_lock_release_inner_splash_diameter_scale_down.xml  focus_lock_release_inner_splash_opacity_fade_out.xml  focus_lock_release_outer_ring_diameter_scale_down.xml  focus_lock_release_outer_ring_opacity_fade_out.xml  long_press_focus_lock_opacity_fade_in.xml  long_press_focus_lock_opacity_fade_out.xml  long_press_focus_lock_size_scale_down.xml  long_press_focus_lock_size_scale_up.xml  m3_btn_elevated_btn_state_list_anim.xml  (+15 more)
MGC/MGC_9.6.080_V24_MGC/smali/: _000.smali  _001.smali  _002.smali  _003.smali  _004.smali  _005.smali  _006.smali  _007.smali  _008.smali  _009.smali  _010.smali  _011.smali  _012.smali  _013.smali  _014.smali  _015.smali  _016.smali  _017.smali  _018.smali  _019.smali  _020.smali  _021.smali  _022.smali  _023.smali  _024.smali  _025.smali  _026.smali  _027.smali  _028.smali  _029.smali  _030.smali  _031.smali  _032.smali  a.smali  aaa.smali  aab.smali  aac.smali  aad.smali  aae.smali  aaf.smali  (+7955 more)
MGC/MGC_9.6.080_V24_MGC/smali_classes2/: aa.smali  abj.smali  abq.smali  adg.smali  adl.smali  ah.smali  ai.smali  ain.smali  ald.smali  anj.smali  aph.smali  apir.smali  art.smali  atm.smali  avw.smali  awr.smali  ay.smali  ayv.smali  bas.smali  bfp.smali  bgk.smali  bic.smali  bjv.smali  bkh.smali  bkv.smali  blt.smali  blz.smali  bmm.smali  bo.smali  bod.smali  bqk.smali  br.smali  bru.smali  bsg.smali  cbm.smali  cbn.smali  cbo.smali  ccc.smali  ccd.smali  cdd.smali  (+6729 more)
app/: build.gradle.kts  proguard-rules.pro
app/src/china/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  dng_parser.cpp  dng_parser.h  jxl_utils.cpp  jxl_utils.h  lut_processor.cpp  math_utils.h  native-lib.cpp  stacking_utils.cpp  stacking_utils.h  vulkan_manager.cpp  vulkan_manager.h  vulkan_raw_stacker.cpp  vulkan_raw_stacker.h  vulkan_stacker.cpp  vulkan_stacker.h  vulkan_utils.cpp  vulkan_utils.h  yuv_utils.cpp  yuv_utils.h
app/src/main/cpp/LibRaw/libraw/: libraw.h
app/src/main/cpp/LibRaw/src/demosaic/: aahd_demosaic.cpp  amaze_demosaic.cpp  lmmse_interpolate.cpp
app/src/main/cpp/LibRaw/src/postprocessing/: dcraw_process.cpp
app/src/main/cpp/cmake/: bin2c.cmake
app/src/main/cpp/shaders/: accumulate.comp  accumulate_raw.comp  align_lk.comp  align_tiles.comp  build_pyramid.comp  color_scatter_raw.comp  green_scatter_raw.comp  normalize.comp  normalize_color_hr.comp  normalize_green_hr.comp  normalize_raw.comp  raw_structure_tensor.comp  reference_preprocess_raw.comp  reference_prior_raw.comp  robustness_raw.comp  structure_tensor.comp  yuv_to_rgba.comp
doc/: handheld-super-res-mainpaper-siggraph19.md  hdr_gainmap.md  lutCreator.md  tonecurve.xml
gradle/: libs.versions.toml
layoutpreview/: README.md  build.gradle.kts
layoutpreview/src/main/: AndroidManifest.xml
previewhook/: build.gradle.kts
previewhook/src/main/: AndroidManifest.xml
scripts/: calc_matrices.py  convert_709_to_srgb.py  convert_luts.py  pyproject.toml
(+3173 files in other folders)
